--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    // MoPub stuff (for all ad types)
-    implementation('com.mopub:mopub-sdk:5.9.0@aar') {
-        transitive = true
-    }
+
     implementation 'com.google.android.gms:play-services-base:17.1.0'
+    implementation 'com.google.android.gms:play-services-ads:18.2.0'
 }
